--- a/signup.html
+++ b/signup.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Sign-up</title>
-    <link rel="stylesheet" href="css/login-signup.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/login-signup.css" >
+    <link rel="stylesheet" href="css/main.css" >
     <script type="module" src="js/signup_auth.js"></script>
     <script src="js/common.js" defer></script>
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html"><img src="img/logo.webp" alt="ebook logo" /></a>
+        <a href="index.html"><img src="img/logo.webp" alt="ebook logo" ></a>
         <form id="desktop_search_form" class="search_form">
           <label for="desktop_search_field">
             <svg
@@ -23,7 +23,7 @@
             >
               <path
                 d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
-              />
+              >
             </svg>
           </label>
           <input
@@ -32,7 +32,7 @@
             aria-label="search field"
             placeholder="Search..."
             required
-          />
+          >
         </form>
         <button class="burger-menu" aria-label="Toggle menu">
           <span></span>
@@ -50,7 +50,7 @@
               >
                 <path
                   d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
-                />
+                >
               </svg>
             </label>
             <input
@@ -59,7 +59,7 @@
               aria-label="search field"
               placeholder="Search..."
               required
-            />
+            >
           </form>
           <a href="index.html" id="home_btn" class="active_page">Home</a>
           <a href="discover.html" id="discover_btn">Discover</a>
@@ -79,7 +79,7 @@
             >
               <path
                 d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q53 0 100-15.5t86-44.5q-39-29-86-44.5T480-280q-53 0-100 15.5T294-220q39 29 86 44.5T480-160Zm0-360q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Zm0-60Zm0 360Z"
-              />
+              >
             </svg>
             <span>Profile</span></a
           >
@@ -108,7 +108,7 @@
                 name="first_name"
                 required
                 placeholder="John"
-              />
+              >
               <span class="error" id="first_name-error"></span>
             </div>
             <div>
@@ -119,7 +119,7 @@
                 name="last_name"
                 required
                 placeholder="Paisley"
-              />
+              >
               <span class="error" id="last_name-error"></span>
             </div>
           </div>
@@ -132,13 +132,13 @@
               name="email"
               required
               placeholder="E.g. john@paisley.com"
-            />
+            >
             <span class="error" id="email-error"></span>
           </div>
 
           <div>
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" required />
+            <input type="password" id="password" name="password" required >
             <span class="error" id="password-error"></span>
           </div>
 
@@ -149,7 +149,7 @@
               id="repeat-password"
               name="repeat-password"
               required
-            />
+            >
             <span class="error" id="repeat-password-error"></span>
           </div>
 
@@ -161,7 +161,7 @@
               name="address"
               required
               placeholder="E.g. Orange Road, 42"
-            />
+            >
             <span class="error" id="address-error"></span>
           </div>
 
@@ -173,13 +173,13 @@
               name="phone_number"
               required
               placeholder="E.g. 34215283"
-            />
+            >
             <span class="error" id="phone_number-error"></span>
           </div>
 
           <div>
             <label for="birth_date">Birthday</label>
-            <input type="date" id="birth_date" name="birth_date" required />
+            <input type="date" id="birth_date" name="birth_date" required >
             <span class="error" id="birth_date-error"></span>
           </div>
           <p class="reminder">
@@ -196,17 +196,17 @@
     <footer>
       <a href="index.html"
         ><img src="img/logo.webp" alt="ebook logo" class="logo" loading="lazy"
-      /></a>
+      ></a>
       <p>&#169; eBooks</p>
       <div class="some_icons">
         <a href="https://www.facebook.com" target="_blank">
-          <img src="img/facebook.png" alt="facebook logo" loading="lazy"/>
+          <img src="img/facebook.png" alt="facebook logo" loading="lazy">
         </a>
         <a href="https://www.instagram.com" target="_blank">
-          <img src="img/instagram.png" alt="instagram logo" loading="lazy" />
+          <img src="img/instagram.png" alt="instagram logo" loading="lazy" >
         </a>
         <a href="https://www.youtube.com" target="_blank">
-          <img src="img/youtube.png" alt="youtube logo" loading="lazy" />
+          <img src="img/youtube.png" alt="youtube logo" loading="lazy" >
         </a>
       </div>
     </footer>
