Add book no IDs and no User ID when checking loan history

--- a/author.html
+++ b/author.html
@@ -131,16 +131,14 @@
     </footer>
     <template id="book-card-template">
       <div class="card">
-        <a href="">
-          <div class="card-header"></div>
-          <div class="card-content">
-            <h3></h3>
-            <p class="published-year"></p>
-          </div>
-          <div class="card-footer">
-            <p>More info</p>
-          </div>
-        </a>
+        <div class="card-header"></div>
+<div class="card-content">
+  <h3><a href="">Book Title</a></h3>
+  <p class="published-year"></p>
+</div>
+<div class="card-footer">
+  <a href="">More info</a>
+</div>
       </div>
     </template>
   </body>
