--- a/results.html
+++ b/results.html
@@ -129,7 +129,7 @@
   </body>
   <template id="book-card-template">
     <article class="card">
-      <a href="">
+      <a href="" class="book-card-link">
         <div class="card-header">
           <p class="publisher"></p>
         </div>
