--- a/book.html
+++ b/book.html
@@ -199,13 +199,13 @@
     </footer>
     <template id="book_card_template">
       <article class="recommendation-card">
-        <a href="#">
+        <a href="#" class="card-link">
           <div class="card-content">
             <h3></h3>
             <p class="author"></p>
           </div>
         </a>
       </article>
-    </template>
+    </template>    
   </body>
 </html>
