--- a/discover.html
+++ b/discover.html
@@ -106,7 +106,7 @@
     <!-- Book Card Template -->
     <template id="book-card-template">
       <div class="card">
-        <a href="">
+        <a href="" class="card-link">
           <div class="card-content">
             <h3></h3>
             <p class="author"></p>
@@ -123,7 +123,7 @@
     <!-- Author Card Template -->
     <template id="author-card-template">
       <div class="card-author">
-        <a href="">
+        <a href="" class="card-link">
           <div class="card-content-author">
             <h3 class="author-name"></h3>
           </div>
