--- a/dashboard.html
+++ b/dashboard.html
@@ -99,8 +99,9 @@
           <p>Look up details and loan history about any book</p>
           <form id="book_details" novalidate>
             <div>
-              <label for="book_id">Book Id</label>
-              <input type="number" id="book_id" required >
+              <label for="book_name">Book Name</label>
+              <input type="text" id="book_name" list="book_dropdown" required autocomplete="off">
+              <datalist id="book_dropdown"></datalist>
               <span class="error hidden"></span>
             </div>
             <button class="btn" type="submit" class="search_book">
@@ -110,7 +111,7 @@
         </section>
         <section class="book_details_container hidden">
           <div class="cover">
-            <img src="" alt="" >
+            <img src="" alt="">
           </div>
           <div id="content">
             <h3></h3>
@@ -143,6 +144,7 @@
                 <line x1="6" y1="6" x2="18" y2="18"></line>
               </svg>
             </button>
+            <span class="error hidden"></span>
             <div class="dialog-content">
               <span class="error"></span>
               <ul class="book_loans"></ul>
@@ -172,7 +174,7 @@
               <div>
                 <div class="search-container">
                   <label for="author_search">Search Author:</label>
-                  <input type="text" id="author_search" list="author_dropdown" placeholder="Search authors..." autocomplete="off"/>
+                  <input type="text" id="author_search" list="author_dropdown" placeholder="Search authors..." autocomplete="off">
                   <span class="error hidden"></span>
                   <datalist id="author_dropdown">
                     <!-- Dynamically populated options will go here -->
@@ -181,7 +183,7 @@
                 
                 <div class="search-container">
                   <label for="publisher_search">Search Publisher:</label>
-                  <input type="text" id="publisher_search" list="publisher_dropdown" placeholder="Search publishers..." autocomplete="off" />
+                  <input type="text" id="publisher_search" list="publisher_dropdown" placeholder="Search publishers..." autocomplete="off">
                   <span class="error hidden"></span>
                   <datalist id="publisher_dropdown">
                     <!-- Dynamically populated options will go here -->
