--- a/discover.html
+++ b/discover.html
@@ -106,8 +106,8 @@
     <!-- Book Card Template -->
     <template id="book-card-template">
       <div class="card">
+        <div class="card-content">
         <a href="" class="card-link">
-          <div class="card-content">
             <h3></h3>
             <p class="author"></p>
             <p class="publishing"></p>
@@ -118,16 +118,17 @@
           </div>
         </a>
       </div>
+      </div>
     </template>
 
     <!-- Author Card Template -->
     <template id="author-card-template">
       <div class="card-author">
-        <a href="" class="card-link">
-          <div class="card-content-author">
-            <h3 class="author-name"></h3>
+        <div class="card-content-author">
+          <a href="" class="card-link">
+          <h3 class="author-name"></h3></a>
           </div>
-        </a>
+        
       </div>
     </template>
     </main>
